--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "alx-react",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint",
+    "check-lint": "lint [0-9]*.js",
+    "test": "jest",
+    "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Munyorodee/alx-react.git"
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "jest": "^24.9.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Munyorodee/alx-react/issues"
-  },
-  "homepage": "https://github.com/Munyorodee/alx-react#readme"
+  "dependencies": {
+    "immutable": "^4.0.0-rc.12"
+  }
 }
